# zero2prod

./: .env  Cargo.toml  README.md
.github/workflows/: audit.yml  main.yml
migrations/: 20240926094530_create_subscriptions_table.sql
scripts/: init_db
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
